methods.returning.MethodsReturning.scala.error
Compilation error:
MethodsReturning:14: error: Unmatched closing brace '}' ignored here
}
^